2010-10-11  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Search history DB if necessary for module charts.

2010-10-11 Sancho Lerena <slerena@artica.es>

	* include/functions_reporting.php: Fixed problem with SQL custom reports
	because the SQL html encoding. Added a SQL check for secure user-input
	SQL code.

	* include/functions.php: Added check_sql() function to do a basic 
	safety check on SQL code.

2010-10-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_io.php: Fixed problem with SQL injection, with the 
	same code in trunk version.

2010-10-08 Sancho Lerena <slerena@artica.es>

	* include/functions_io.php: Fixed problem with SQL injection
	when using blank/tab characters.

2010-10-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/estado_agente.php, ver_agente.php: Fixed a problem
	with input parameters.

2010-09-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/tactical.php: Fixed the global
	data showed in tactical view merged from trunk

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* operation/messages/message.php
	  include/functions_db.php: Fixed the ACLs in 
	  the user destination combo merged from trunk

2010-09-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Deleted the useless function
	print_select_groups 

2010-09-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Added the function print_select_groups
	merged from trunk

2010-09-22  Sancho Lerena <slerena@artica.es>

        * godmode/reporting/visual_console_builder.elements.php,
        godmode/reporting/visual_console_builder.editor.php: Fixed bug 
        #3073239: bad intervals in combo for period selection.


2010-09-08  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* godmode/alerts/alert_list.list.php: fixed the pagination when the list of
	alerts show into alert tab in agent config page.
	
	Fixes: #3055920
