@@ -1,3 +1,8 @@
+2010-10-13  Sancho Lerena <slerena@artica.es>
+
+	* operation/agentes/networkmap.php: Applied security fixes to network
+	grapviz maps (safe_url call to parameters first). Ported from trunk.
+
 2010-10-11  Ramon Novoa  <rnovoa@artica.es>
 
 	* include/fgraph.php: Search history DB if necessary for module charts.
